refactor: add haveNextOneOnSameLine support for form layouts and detail lines, update policy rule entity, and improve field width handling
- Introduce haveNextOneOnSameLine property to AMetaData, CDetailLines,
and related services for controlling field layout on the same line
- Add CFormHorizontalLayout for enhanced form field alignment
- Refactor CFormBuilder to support dynamic field widths and layout
logic, including width constants and resolution
- Update CBabPolicyRule entity: reorganize relationships, add
actions/filters/triggers collections, and provide add/remove methods
- Adjust initializer and service logic to utilize new layout and entity
features
- Update CUIConstants with new field width constants and remove unused
values
- Minor code cleanups and formatting improvements across affected
classes